Fix gcode path and telegram config update

--- a/telegram.conf
+++ b/telegram.conf
@@ -121,7 +121,7 @@ height: 0.2
 #	When set to 0.25, notifications are sent at 0.25mm, 0.5mm, 0.75mm, etc, print height.
 #	The default is not to send notifications based on print height.
 #	This value should be an float >=0.0.
-time: 5
+#time: 5
 #	This is the recommended way to use progress notifications.
 #	This is an interval in seconds, when a notification with a picture is sent to the chat.
 #	When set to 600, notifications are sent at 600 seconds, 1200 seconds, 1800 seconds, etc, print time.
@@ -155,10 +155,10 @@ cleanup: true
 #	Should the bot clean the catalog with pictures and video after the successful sending to the telegram chat.
 #	Default is true. You might want to set it to false, if you intend on using the pictures later.
 #	This value should be boolean.
-height: 0.2
+height: 0.4
 #	The bot can take timelapse pictures based on the z axis height (e.g. 0.2). The default is not to take pictures based on height.
 #	This value should be an float >=0.0.
-time: 5
+#time: 5
 #	The bot can take timelapse pictures based on time intervals in seconds. 
 #	The default is not to take pictures based on time intervals.
 #	This value should be an integer >=0.
