--- a/moonraker-obico.cfg
+++ b/moonraker-obico.cfg
@@ -8,7 +8,7 @@ port = 7125
 # api_key = <grab one or set trusted hosts in moonraker>
 
 [webcam]
-disable_video_streaming = False
+disable_video_streaming = True
 
 # CAUTION: Don't modify the settings below unless you know what you are doing
 #   In most cases webcam configuration will be automatically retrived from moonraker
