Disable telegram timelaps and decrease update freq

--- a/moonraker-obico.cfg
+++ b/moonraker-obico.cfg
@@ -1,14 +1,30 @@
+# https://www.obico.io/docs/user-guides/moonraker-obico/config/
+
 [server]
 url = http://192.168.50.98:3334
+#   The URL for the Obico Server. Such as "https://app.obico.io".
 auth_token = 5e552bea3cb449045f13
+#   The authentication token to authenticate Obico for Klipper client
+#   to the Obico Server. This is typically obtained by the install.sh 
+#   from the server during the linking process. Don't directly set it.
 
 [moonraker]
 host = 127.0.0.1
+#   Moonraker host. Usually it's "127.0.0.1", namely the same host as Obico for Klipper.
 port = 7125
+#   The port Moonraker is listening on. The default port for Moonraker is 7125 but can be a different one, which is very typical on a system that runs multiple Moonraker instances.
 # api_key = <grab one or set trusted hosts in moonraker>
 
 [webcam]
 disable_video_streaming = True
+#   Default to False. Change it to True to disable the webcam streaming in some rare cases.
+#snapshot_url =  
+#stream_url = 
+#flip_h = 
+#flip_v = 
+#rotate_90 = 
+#aspect_ratio_169 = 
+#   Set values in this section only when Obico for Klipper can't obtain these configurations, which is very rare.
 
 # CAUTION: Don't modify the settings below unless you know what you are doing
 #   In most cases webcam configuration will be automatically retrived from moonraker
@@ -22,4 +38,6 @@ stream_url = http://192.168.50.99/webcam/?action=stream
 
 [logging]
 path = /home/aspruyt/printer_data/logs/moonraker-obico.log
-# level = INFO
+#   The path to the log file. Will be automatically rotated at 5MB size.
+level = INFO
+#   Default to INFO. Set to DEBUG to see a lot more details in the logs
