--- a/telegram.conf
+++ b/telegram.conf
@@ -109,19 +109,19 @@ host: http://localhost/webcam/?action=stream
 #	Default is "high"
 
 [progress_notification]
-percent: 0
+#percent: 0
 #	This is an interval in percent, when a notification with a picture is sent to the chat.
 #	When set to 5, notifications are sent at 5%, 10%, 15%, etc.
 #	When set to 3, notifications are sent at 3%, 6%, 9%, etc.
 #	The default is not to send notifications based on print percentage.
 #	This value should be an integer >=0.
-height: 0.2
+#height: 0
 #	This is an interval in mm, when a notification with a picture is sent to the chat.
 #	When set to 5.0, notifications are sent at 5.0mm, 10.0mm, 15.0mm, etc, print height.
 #	When set to 0.25, notifications are sent at 0.25mm, 0.5mm, 0.75mm, etc, print height.
 #	The default is not to send notifications based on print height.
 #	This value should be an float >=0.0.
-#time: 5
+time: 60
 #	This is the recommended way to use progress notifications.
 #	This is an interval in seconds, when a notification with a picture is sent to the chat.
 #	When set to 600, notifications are sent at 600 seconds, 1200 seconds, 1800 seconds, etc, print time.
@@ -141,12 +141,12 @@ height: 0.2
 #	This value should be boolean.
 
 [timelapse]
-#basedir: ~/moonraker-telegram-bot-timelapse
+basedir: ~/printer_data/moonraker-telegram-bot-timelapse
 #	This sets the folder, where to save timelapse pictures and the resulting video. 
 #	Default is '~/moonraker-telegram-bot-timelapse', but you can set it to any catalog, which the bot 
 #	has rights to write to. Might be useful for saving the sd cards life by writing to external storage.
 #	This value is not validated automatically.
-#copy_finished_timelapse_dir: /home/pi/timelapse/finished
+#copy_finished_timelapse_dir: ~/timelapse/
 #	This sets the folder, to which finished timelapses get copied to. 
 #	The default behaviour is not to copy it anywhere. This might be useful, if you want to keep only the videos, 
 #	but clean up the pictures, or if you want to upload the videos to some network location.
@@ -155,14 +155,14 @@ cleanup: true
 #	Should the bot clean the catalog with pictures and video after the successful sending to the telegram chat.
 #	Default is true. You might want to set it to false, if you intend on using the pictures later.
 #	This value should be boolean.
-height: 0.4
+#height: 0
 #	The bot can take timelapse pictures based on the z axis height (e.g. 0.2). The default is not to take pictures based on height.
 #	This value should be an float >=0.0.
-#time: 5
+#time: 0
 #	The bot can take timelapse pictures based on time intervals in seconds. 
 #	The default is not to take pictures based on time intervals.
 #	This value should be an integer >=0.
-target_fps: 30  
+#target_fps: 15  
 #	This is the target fps of the created video. The larger this number, the "faster" the timelapse will be.
 #	15 fps equals 15 images per second lapsing. The default is 15 fps.
 #	This value should be an integer >0.
@@ -187,10 +187,10 @@ target_fps: 30
 #	This may be useful, if you intend shutting down the printer, if you want to automatically start another print,
 #	or if you want to do something with the video after its ready. 
 #	This value is not validated automatically.
-#send_finished_lapse: true
+send_finished_lapse: false
 #	If you want to build the lapse, but do not want to send it, set this to false. Default is true.
 #	This value should be boolean.
-#manual_mode: false
+manual_mode: true
 #	If True, only commands from gcode will manage timelapse.
 #	Default is false.
 #	This value should be boolean.
