Recalibrated after high temp upgrade

--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -24,13 +24,14 @@ gcode:
   {% endif %}
   #SET_GCODE_OFFSET Z=0.0 ;Reset the G-Code Z offset (adjust Z offset if needed) - Dont want to do this, z offset should already be tuned.
   G28 ; Home the printer
-  G90 ; Absolute positioning
-  G1 Z{Z_MAX / 4.0} F6000 ; Move up to keep bed clean
+  #G90 ; Absolute positioning
+  # instead of moving up and waiting for extruder to reach target temp go to where the blob is going to be purged and wait there so that if any oozing happens it doesnt drop in the middle of the bed.
+  #G1 Z{Z_MAX / 4.0} F6000 ; Move up to keep bed clean
   # Set and wait for nozzle to reach temperature
-  {% if params.EXTRUDER_TEMP is not none %}
-    M104 S{EXTRUDER_TEMP}
-    M109 S{EXTRUDER_TEMP}
-  {% endif %}
+  #{% if params.EXTRUDER_TEMP is not none %}
+  #  M104 S{EXTRUDER_TEMP}
+  #  M109 S{EXTRUDER_TEMP}
+  #{% endif %}
   PURGE_BLOB EXTRUDER_TEMP={params.EXTRUDER_TEMP}
 
 ######################################################################
@@ -38,25 +39,25 @@ gcode:
 ######################################################################
 [gcode_macro PURGE_BLOB]
 gcode:
+  # Generate pseudo random start position so we dont wear out that one spot on the bed.
+  {% set X_START = (95 + ( printer.system_stats.cputime * 1000 ) % 60)|float %}
+  {% set Y_START = 13.0|float %}
+  G90                                  ; Absolute positioning
+  G1 X{ X_START } Y{Y_START} Z10 F18000; Go to start pos for perge line
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
   # Set and wait for nozzle to reach temperature
   {% if params.EXTRUDER_TEMP is not none %}
     M104 S{EXTRUDER_TEMP}
     M109 S{EXTRUDER_TEMP}
   {% endif %}
-  # Generate pseudo random start position so we dont wear out that one spot on the bed.
-  {% set X_START = (95 + ( printer.system_stats.cputime * 1000 ) % 60)|float %}
-  {% set Y_START = 13.0|float %}
-  G92 E0                               ; Zero the extruder
-  G90                                  ; Absolute positioning
-  G1 X{ X_START } Y{Y_START} Z1 F18000 ; Go to start pos for perge line
   G1 Z0.4 F600                         ; Lower to purge height
   G91                                  ; Relative positioning
   M106 S0                              ; Turn off cooling fan
-  G1 X5 E30 F40                        ; Extrude blob of filament on the bed
+  G92 E0                               ; Zero the extruder
+  G1 X5 E20 F40                        ; Extrude blob of filament on the bed
   M106 P0                              ; Enable cooling Fan
-  G1 X30 Z10 F100                       ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
-  G1 X5  Z-10.1 F9000                   ; Now that the blob has cleared the duct we go back down for a short 0.3mm height extrusion
+  G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
+  G1 X5  Z-10.1 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.3mm height extrusion
   G1 X5 E2 F180                        ; Slow 5mm extrude move to help with stringing
   G1 X30 E-1 F6000                     ; Fast move and retract to break strings and reduce ooze
   G1 Z1 F100                           ; Lift
@@ -70,17 +71,17 @@ gcode:
 [gcode_macro END_PRINT]
 description: Replace the slicer's custom start and end g-code scripts with END_PRINT.
 gcode:
-  M104 S0 ; Turn-off hotend
-  G91 ; Relative positioning
-  G1 E-2 F2700 ; Retract a bit
-  G1 E-2 Z0.2 F2400 ; Retract and raise Z
-  G1 X5 Y5 F3000 ; Wipe out
-  G1 Z10 ; Raise Z more
-  M106 S0 ; Turn-off fan
-  M140 S0 ; Turn-off bed
-  G90 ; Absolute positioning
-  G1 X50 Y200.0 ; Present print
-  M84 X Y E ; Disable all steppers but Z
+  M104 S0                              ; Turn-off hotend
+  G91                                  ; Relative positioning
+  G1 E-2 F2700                         ; Retract a bit
+  G1 E-2 Z0.2 F2400                    ; Retract and raise Z
+  G1 X5 Y5 F3000                       ; Wipe out
+  G1 Z10                               ; Raise Z more
+  M106 S0                              ; Turn-off fan
+  M140 S0                              ; Turn-off bed
+  G90                                  ; Absolute positioning
+  G1 X50 Y200.0                        ; Present print
+  M84 X Y E                            ; Disable all steppers but Z
   VENT_ENCLOSURE
 
 ######################################################################
@@ -233,7 +234,7 @@ gcode:
 [gcode_macro SET_ENCLOSURE_TARGET_TEMP]
 description: Set the enclosure target temperature to be controlled by the temperature fan
 gcode:
-  {% set TARGET_TEMP  = params.TARGET|default(40.0)|float %}
+  {% set TARGET_TEMP  = params.TARGET|default(30.0)|float %}
   SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=enclosure_fan TARGET={TARGET_TEMP}
 
 [gcode_macro VENT_ENCLOSURE]
@@ -289,6 +290,21 @@ gcode:
 description: Query the hotend / x axis ADXL345
 gcode:
   ACCELEROMETER_QUERY CHIP=hotend
+
+[gcode_macro MEASURE_RESONANCE_ALL]
+description:
+gcode:
+  SHAPER_CALIBRATE
+
+[gcode_macro MEASURE_RESONANCE_X]
+description:
+gcode:
+  SHAPER_CALIBRATE AXIS=X
+
+[gcode_macro MEASURE_RESONANCE_Y]
+description:
+gcode:
+  SHAPER_CALIBRATE AXIS=Y
 
 ######################################################################
 # Control Relay Channels
