--- a/printer.cfg
+++ b/printer.cfg
@@ -10,13 +10,13 @@
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [bltouch]
-#*# z_offset = 2.355
+#*# z_offset = 1.905
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 21.200
-#*# pid_ki = 1.140
-#*# pid_kd = 98.582
+#*# pid_kp = 21.779
+#*# pid_ki = 1.320
+#*# pid_kd = 89.839
 #*#
 #*# [heater_bed]
 #*# control = pid
@@ -26,19 +26,19 @@
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = mzv
-#*# shaper_freq_x = 61.6
-#*# shaper_type_y = ei
-#*# shaper_freq_y = 48.0
+#*# shaper_freq_x = 58.8
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 41.0
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.157500, -0.076250, -0.116250, -0.070000, -0.073750, -0.042500
-#*# 	  -0.236250, -0.152500, -0.183750, -0.127500, -0.112500, -0.132500
-#*# 	  -0.206250, -0.072500, -0.115000, -0.048750, -0.057500, -0.091250
-#*# 	  -0.142500, -0.037500, -0.065000, -0.001250, -0.020000, -0.013750
-#*# 	  -0.125000, -0.018750, -0.035000, 0.021250, 0.017500, 0.017500
-#*# 	  -0.081250, 0.003750, -0.030000, 0.020000, -0.006250, -0.038750
+#*# 	-0.097500, -0.077500, -0.112500, -0.090000, -0.125000, -0.091250
+#*# 	-0.235000, -0.192500, -0.205000, -0.180000, -0.168750, -0.172500
+#*# 	-0.162500, -0.082500, -0.151250, -0.108750, -0.145000, -0.082500
+#*# 	-0.128750, -0.087500, -0.122500, -0.041250, -0.097500, -0.053750
+#*# 	-0.120000, -0.061250, -0.090000, -0.045000, -0.075000, -0.033750
+#*# 	-0.093750, -0.038750, -0.090000, -0.050000, -0.077500, -0.053750
 #*# tension = 0.2
 #*# min_x = 13.0
 #*# algo = bicubic
