--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -76,12 +76,12 @@ gcode:
   G1 E-2 F2700                         ; Retract a bit
   G1 E-2 Z0.2 F2400                    ; Retract and raise Z
   G1 X5 Y5 F3000                       ; Wipe out
-  G1 Z10                               ; Raise Z more
   M106 S0                              ; Turn-off fan
   M140 S0                              ; Turn-off bed
+  G1 Z20                               ; Raise Z more
   G90                                  ; Absolute positioning
   G1 X50 Y200.0                        ; Present print
-  M84 X Y E                            ; Disable all steppers but Z
+  #M84 X Y E                           ; Disable all steppers but Z
   VENT_ENCLOSURE
 
 ######################################################################
@@ -111,10 +111,10 @@ gcode:
   {% set Z = params.Z|default(10)|float %}
   SAVE_GCODE_STATE NAME=M600_state
   PAUSE
-  G91
-  G1 E-.8 F2700
+  G91                                     ; Relative positioning
+  G1 E-.8 F2700                           ; Retract a bit
   G1 Z{Z}
-  G90
+  G90                                     ; Absolute positioning
   G1 X{X} Y{Y} F3000
   G91
   G1 E-50 F1000
@@ -305,6 +305,33 @@ gcode:
 description:
 gcode:
   SHAPER_CALIBRATE AXIS=Y
+
+######################################################################
+# Filament Type Swap
+######################################################################
+[gcode_macro LOAD_PLA_FROM_PETG]
+description: Swap to PLA filament from PETG base config
+gcode:
+  M221 S115                           ; Set flow %
+  M106 S100                           ; Set fan %
+  M104 S190                           ; Set hotend temp
+  M109 S190                           ; Wait for hotend temp
+
+[gcode_macro LOAD_PLA_PLUS_FROM_PETG]
+description: Swap to PLA+ filament from PETG base config
+gcode:
+  M221 S115                           ; Set flow %
+  M106 S100                           ; Set fan %
+  M104 S210                           ; Set hotend temp
+  M109 S210                           ; Wait for hotend temp
+
+[gcode_macro LOAD_PETG_FROM_PLA_PLUS]
+description: Swap to PETG filament from PLA+ base config
+gcode:
+  M221 S87                            ; Set flow %
+  M106 S20                            ; Set fan %
+  M104 S245                           ; Set hotend temp
+  M109 S245                           ; Wait for hotend temp
 
 ######################################################################
 # Control Relay Channels
