--- a/moonraker-update-manager.cfg
+++ b/moonraker-update-manager.cfg
@@ -19,7 +19,7 @@ install_script: scripts/install.sh
 [update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
-primary_branch: ref/installer #master
+primary_branch: hotfix/makefile
 origin: https://github.com/anthony-spruyt/crowsnest.git
 managed_services: crowsnest
 install_script: tools/install.sh
