--- a/printer-ender3-s1.cfg
+++ b/printer-ender3-s1.cfg
@@ -69,7 +69,7 @@ max_temp: 300
 # Uncomment this to do extruder calibration
 #min_extrude_temp: 0
 # was set to 0.12 by the custom profile I used as ref
-pressure_advance: 0.12
+#pressure_advance: 0.12
 
 [heater_bed]
 heater_pin: PA7
@@ -146,12 +146,13 @@ speed: 100
 z_hop: 10
 z_hop_speed: 5
 
-[filament_switch_sensor RunoutSensor]
-switch_pin: !PC15
+# Disable runout sensor since it is not plugged in currently. Hate that stock piece of shite...
+#[filament_switch_sensor RunoutSensor]
+#switch_pin: !PC15
 # was set to False by the custom profile I used as ref
-pause_on_runout: False
-runout_gcode:
-  M600
+#pause_on_runout: False
+#runout_gcode:
+#  M600
 #insert_gcode: RESUME
 
 [temperature_sensor Board_MCU]
