--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -50,20 +50,20 @@ gcode:
     M104 S{EXTRUDER_TEMP}
     M109 S{EXTRUDER_TEMP}
   {% endif %}
-  G1 Z0.4 F600                         ; Lower to purge height
-  G91                                  ; Relative positioning
-  M106 S0                              ; Turn off cooling fan
+  #G1 Z0.4 F600                         ; Lower to purge height
+  #G91                                  ; Relative positioning
+  #M106 S0                              ; Turn off cooling fan
   G92 E0                               ; Zero the extruder
-  G1 X5 E20 F40                        ; Extrude blob of filament on the bed
-  M106 P0                              ; Enable cooling Fan
-  G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
-  G1 X5  Z-10.1 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.3mm height extrusion
-  G1 X5 E2 F180                        ; Slow 5mm extrude move to help with stringing
-  G1 X30 E-1 F6000                     ; Fast move and retract to break strings and reduce ooze
-  G1 Z1 F100                           ; Lift
-  M106 P0 S0                           ; Disable Cooling Fan
-  G92 E0                               ; Zero the extruder
-  G90                                  ; Absolute positioning
+  #G1 X5 E20 F40                        ; Extrude blob of filament on the bed
+  #M106 P0                              ; Enable cooling Fan
+  #G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
+  #G1 X5  Z-10.1 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.3mm height extrusion
+  #G1 X5 E2 F180                        ; Slow 5mm extrude move to help with stringing
+  #G1 X30 E-1 F6000                     ; Fast move and retract to break strings and reduce ooze
+  #G1 Z1 F100                           ; Lift
+  #M106 P0 S0                           ; Disable Cooling Fan
+  #G92 E0                               ; Zero the extruder
+  #G90                                  ; Absolute positioning
 
 ######################################################################
 # End print
