--- a/printer-raspberry-pi-mcu.cfg
+++ b/printer-raspberry-pi-mcu.cfg
@@ -139,7 +139,11 @@ sensor_mcu: host
 #   The micro-controller to read from. Must be the host_mcu
 #sensor_pin:
 control: watermark
-max_delta: 2.5
+max_delta: 1.5
+#   On 'watermark' controlled heaters this is the number of degrees in
+#   Celsius above the target temperature before disabling the heater
+#   as well as the number of degrees below the target before
+#   re-enabling the heater. The default is 2 degrees Celsius.
 min_temp: -10.0
 max_temp: 70.0
 #   See the "extruder" section for a description of the above parameters.
@@ -158,7 +162,7 @@ max_temp: 70.0
 #   A time value (in seconds) over which temperature measurements will
 #   be smoothed when using the PID control algorithm. This may reduce
 #   the impact of measurement noise. The default is 2 seconds.
-target_temp: 40.0
+target_temp: 30.0
 #   A temperature (in Celsius) that will be the target temperature.
 #max_speed: 1.0
 #   The fan speed (expressed as a value from 0.0 to 1.0) that the fan
