--- a/moonraker.conf
+++ b/moonraker.conf
@@ -272,8 +272,32 @@ cors_domains:
 #  the user with a confirmation dialog.  The default is to include
 #  RESTART and FIRMWARE_RESTART.
 
+[include moonraker-power.cfg]
+
+[update_manager]
+channel: dev
+refresh_interval: 168
+
 [include moonraker-obico-update.cfg]
 
-[include moonraker-update-manager.cfg]
+[update_manager mainsail]
+type: web
+channel: stable
+repo: mainsail-crew/mainsail
+path: ~/mainsail
 
-[include moonraker-power.cfg]
+[update_manager moonraker-telegram-bot]
+type: git_repo
+path: ~/moonraker-telegram-bot
+origin: https://github.com/nlef/moonraker-telegram-bot.git
+env: ~/moonraker-telegram-bot-env/bin/python
+requirements: scripts/requirements.txt
+install_script: scripts/install.sh
+
+[update_manager crowsnest]
+type: git_repo
+path: ~/crowsnest
+primary_branch: hotfix/makefile
+origin: https://github.com/anthony-spruyt/crowsnest.git
+managed_services: crowsnest
+install_script: tools/install.sh
