--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -22,6 +22,7 @@ gcode:
   {% if params.BED_TEMP is not none %}
     M190 S{BED_TEMP}
   {% endif %}
+  BED_MESH_PROFILE LOAD=default # load the default bed mesh profile since it is not automatically loaded anymore since 1 Feb 2023
   #SET_GCODE_OFFSET Z=0.0 ;Reset the G-Code Z offset (adjust Z offset if needed) - Dont want to do this, z offset should already be tuned.
   G28 ; Home the printer
   #G90 ; Absolute positioning
@@ -40,8 +41,8 @@ gcode:
 [gcode_macro PURGE_BLOB]
 gcode:
   # Generate pseudo random start position so we dont wear out that one spot on the bed.
-  {% set X_START = (95 + ( printer.system_stats.cputime * 1000 ) % 60)|float %}
-  {% set Y_START = 13.0|float %}
+  {% set X_START = (90 + ( printer.system_stats.cputime * 1000 ) % 35)|float %}
+  {% set Y_START = -1.0|float %}
   G90                                  ; Absolute positioning
   G1 X{ X_START } Y{Y_START} Z10 F18000; Go to start pos for perge line
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
@@ -50,20 +51,20 @@ gcode:
     M104 S{EXTRUDER_TEMP}
     M109 S{EXTRUDER_TEMP}
   {% endif %}
-  #G1 Z0.4 F600                         ; Lower to purge height
-  #G91                                  ; Relative positioning
-  #M106 S0                              ; Turn off cooling fan
+  G1 Z0.4 F600                         ; Lower to purge height
+  G91                                  ; Relative positioning
+  M106 S0                              ; Turn off cooling fan
   G92 E0                               ; Zero the extruder
-  #G1 X5 E20 F40                        ; Extrude blob of filament on the bed
-  #M106 P0                              ; Enable cooling Fan
-  #G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
-  #G1 X5  Z-10.1 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.3mm height extrusion
-  #G1 X5 E2 F180                        ; Slow 5mm extrude move to help with stringing
-  #G1 X30 E-1 F6000                     ; Fast move and retract to break strings and reduce ooze
-  #G1 Z1 F100                           ; Lift
-  #M106 P0 S0                           ; Disable Cooling Fan
-  #G92 E0                               ; Zero the extruder
-  #G90                                  ; Absolute positioning
+  G1 X5 E10 F40                        ; Extrude blob of filament on the bed
+  M106 P0                              ; Enable cooling Fan
+  G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
+  G1 X5  Z-10.2 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.2mm height extrusion
+  G1 X5 E2 F180                        ; Slow 5mm extrude move to help with stringing
+  G1 X30 E-1 F6000                     ; Fast move and retract to break strings and reduce ooze
+  G1 Z1 F100                           ; Lift
+  M106 P0 S0                           ; Disable Cooling Fan
+  G92 E0                               ; Zero the extruder
+  G90                                  ; Absolute positioning
 
 ######################################################################
 # End print
