--- a/printer-raspberry-pi-host.cfg
+++ b/printer-raspberry-pi-host.cfg
@@ -19,3 +19,14 @@ max_temp: 100
 #gcode_id:
 #   See the "heater_generic" section for the definition of this
 #   parameter.
+
+[respond]
+#default_type: echo
+#   Sets the default prefix of the "M118" and "RESPOND" output to one
+#   of the following:
+#       echo: "echo: " (This is the default)
+#       command: "// "
+#       error: "!! "
+#default_prefix: echo:
+#   Directly sets the default prefix. If present, this value will
+#   override the "default_type".
