--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -1,5 +1,6 @@
 #### crowsnest.conf
-#### This is mainsail / MainsailOS default config.
+#### This is a typical default config.
+#### Also used as default in mainsail / MainsailOS
 #### See:
 #### https://github.com/mainsail-crew/crowsnest/blob/master/README.md
 #### for details to configure to your needs.
@@ -17,20 +18,26 @@
 ####    Port 8083 equals /webcam4/?action=[stream/snapshot]     #####
 ####                                                            #####
 #####################################################################
+####    RTSP Stream URL: ( if enabled and supported )           #####
+####    rtsp://<ip>:<rtsp_port>/stream.h264                     #####
+#####################################################################
 
 
 [crowsnest]
-log_path: ~/printer_data/logs/crowsnest.log
-log_level: quiet                        # Valid Options are quiet/verbose/debug
-delete_log: false                        # Deletes log on every restart, if set to true
-#no_proxy: true                          # Forces ustreamer to listen on all available network interfaces.
+log_path: /home/aspruyt/printer_data/logs/crowsnest.log
+log_level: debug                      # Valid Options are quiet/verbose/debug
+delete_log: false                       # Deletes log on every restart, if set to true
+no_proxy: false
 
 [cam 1]
-mode: mjpg                              # mjpg/rtsp
-port: 8080                              # Port
+mode: ustreamer                         # ustreamer - Provides mjpg and snapshots. (All devices)
+                                        # camera-streamer - Provides webrtc, mjpg and snapshots. (rpi + Raspi OS based only)
+enable_rtsp: false                      # If camera-streamer is used, this enables also usage of an rtsp server
+rtsp_port: 8554                         # Set different ports for each device!
+port: 8080                              # HTTP/MJPG Stream/Snapshot Port
 device: /dev/video0                     # See Log for available ...
-resolution: 1296x972                    # 648x486 1296x972 2592x1944
-max_fps: 15                             # If Hardware Supports this it will be forced, ohterwise ignored/coerced.
+resolution: 648x486                     # widthxheight format
+max_fps: 15                             # If Hardware Supports this it will be forced, otherwise ignored/coerced.
 # You can run the Stream Services with custom flags. See https://manpages.ubuntu.com/manpages/jammy/man1/ustreamer.1.html and https://github.com/pikvm/ustreamer
 custom_flags: --flip-vertical=1 --flip-horizontal=1
 # Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
