--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -2,7 +2,7 @@
 # https://github.com/Klipper3d/klipper/blob/master/config/sample-macros.cfg
 
 ######################################################################
-# Start print
+# Start print 
 ######################################################################
 [gcode_macro START_PRINT]
 description: Replace the slicer's custom start and end g-code scripts with START_PRINT.
@@ -12,8 +12,9 @@ gcode:
   # Get bed and extruder temperature from slicer
   {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
+  #{% set ENCLOSURE_TEMP = params.ENCLOSURE_TEMP|default(30)|float %} # this is now handled by the slicer + gcode M141
   POWER_ON_LIGHTS
-  SET_ENCLOSURE_TARGET_TEMP
+  #SET_ENCLOSURE_TARGET_TEMP TARGET={ENCLOSURE_TEMP}  # this is now handled by the slicer + gcode M141
   # Start bed heating
   {% if params.BED_TEMP is not none %}
     M140 S{BED_TEMP}
@@ -22,9 +23,9 @@ gcode:
   {% if params.BED_TEMP is not none %}
     M190 S{BED_TEMP}
   {% endif %}
-  BED_MESH_PROFILE LOAD=default # load the default bed mesh profile since it is not automatically loaded anymore since 1 Feb 2023
-  #SET_GCODE_OFFSET Z=0.0 ;Reset the G-Code Z offset (adjust Z offset if needed) - Dont want to do this, z offset should already be tuned.
   G28 ; Home the printer
+  #SET_GCODE_OFFSET Z=0.0 ;Reset the G-Code Z offset (adjust Z offset if needed) - Dont want to do this, z offset should already be tuned.
+  BED_MESH_PROFILE LOAD=default # load the bed mesh profile since it is not automatically loaded anymore since 1 Feb 2023
   #G90 ; Absolute positioning
   # instead of moving up and waiting for extruder to reach target temp go to where the blob is going to be purged and wait there so that if any oozing happens it doesnt drop in the middle of the bed.
   #G1 Z{Z_MAX / 4.0} F6000 ; Move up to keep bed clean
@@ -55,7 +56,7 @@ gcode:
   G91                                  ; Relative positioning
   M106 S0                              ; Turn off cooling fan
   G92 E0                               ; Zero the extruder
-  G1 X5 E10 F40                        ; Extrude blob of filament on the bed
+  G1 X5 E20 F40                        ; Extrude blob of filament on the bed
   M106 P0                              ; Enable cooling Fan
   G1 X30 Z10 F100                      ; Slow drag away from the blob with fans helping cool and break strings. Also raize Z so the blob clears the fan duct
   G1 X5  Z-10.2 F9000                  ; Now that the blob has cleared the duct we go back down for a short 0.2mm height extrusion
@@ -89,17 +90,25 @@ gcode:
 # Idle timeout
 ######################################################################
 [gcode_macro IDLE_TIMEOUT_SHUTDOWN]
-gcode: 
-  SDCARD_RESET_FILE
-  TURN_OFF_HEATERS
-  VENT_ENCLOSURE
-  M84 X Y E ; Disable all steppers but Z
-  # Wait for hotend and bed to reach room temp - https://www.klipper3d.org/G-Codes.html#temperature_wait
-  TEMPERATURE_WAIT SENSOR=extruder MAXIMUM=40.0
-  TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM=40.0
-  DISABLE_ENCLOSURE_FAN
-  POWER_OFF_LIGHTS
-  POWER_OFF_PRINTER ; Switch off the printer - this causes the enclosure fan to go once klipper is not running and only moonraker
+gcode:
+  {% if printer.webhooks.state|lower == 'ready' %}
+    {% if printer.pause_resume.is_paused|lower == 'false' %}
+      # it is safe to shut down
+      SDCARD_RESET_FILE
+      TURN_OFF_HEATERS
+      VENT_ENCLOSURE
+      M84 X Y E ; Disable all steppers but Z
+      # Wait for hotend and bed to reach room temp - https://www.klipper3d.org/G-Codes.html#temperature_wait
+      TEMPERATURE_WAIT SENSOR=extruder MAXIMUM=40.0
+      TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM=40.0
+      DISABLE_ENCLOSURE_FAN
+      POWER_OFF_LIGHTS
+      POWER_OFF_PRINTER ; Switch off the printer - this causes the enclosure fan to go once klipper is not running and only moonraker
+    {% else %}
+      # a print is currently paused so only turn off the hotend
+      M104 S0
+    {% endif %}
+  {% endif %}
 
 ######################################################################
 # Filament Change
@@ -145,6 +154,7 @@ gcode:
       {% set z_safe = max_z - act_z %}
   {% endif %}
   ##### end of definitions #####
+  SAVE_GCODE_STATE NAME=PAUSE_state
   PAUSE_BASE
   G91
   {% if printer.extruder.can_extrude|lower == 'true' %}
@@ -206,6 +216,8 @@ gcode:
   {% else %}
     {action_respond_info("Extruder not hot enough")}
   {% endif %}  
+  G90
+  RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
   RESUME_BASE {get_params}
 
   # TODO check out alternate version below
@@ -247,6 +259,10 @@ gcode:
 description: Disables the enclosure fan permanently unless it gets close the the max temp where it will switch on again
 gcode:
   SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=enclosure_fan TARGET=0.0
+
+[gcode_macro M141]
+description: Set the enclosure target temperature to be controlled by the temperature fan
+gcode: SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=enclosure_fan TARGET={params.S|default(30.0)|float}
 
 ######################################################################
 # Shut down the printer
