new macros folder

--- a/moonraker-power.cfg
+++ b/moonraker-power.cfg
@@ -67,8 +67,11 @@
 #type: gpio
 #pin: !gpio19
 #off_when_shutdown: True
-#restart_klipper_when_powered: False
-#initial_state: off
+
+[power Filament Dryer]
+type: gpio
+pin: !gpio24
+initial_state: on
 
 [power Printer]
 type: gpio
@@ -78,12 +81,9 @@ on_when_job_queued: True
 locked_while_printing: True
 restart_klipper_when_powered: True
 restart_delay: 5
-initial_state: off
 
 [power Lights]
 type: gpio
 pin: !gpio23
 off_when_shutdown: True
-restart_klipper_when_powered: False
 on_when_job_queued: True
-initial_state: off
