--- a/printer-ender3-s1.cfg
+++ b/printer-ender3-s1.cfg
@@ -8,10 +8,10 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 40
 endstop_pin: !PA5
-position_endstop: 0
+position_endstop: 0 #3.5
 # was set to 258 by the custom profile I used as ref
-position_max: 240 # The ribbon protector and ribbon healthy max is 240
-position_min: -1
+position_max: 240 #238.5 # The ribbon protector and ribbon healthy max is 240
+position_min: -1 #3.5
 homing_speed: 50
 
 [stepper_y]
@@ -173,14 +173,14 @@ max_temp: 100
 #   the captured position (in mm/s). Default is 50.0 mm/s.
 
 [idle_timeout]
-timeout: 300
+timeout: 3600
 #   Idle time (in seconds) to wait before running the above G-Code
 #   commands. The default is 600 seconds.
 gcode:
 #   A list of G-Code commands to execute on an idle timeout. See
 #   docs/Command_Templates.md for G-Code format. The default is to run
 #   "TURN_OFF_HEATERS" and "M84".
-  IDLE_TIMEOUT_SHUTDOWN
+  ON_IDLE_TIMEOUT
 
 [input_shaper]
 #shaper_freq_x: 62.0
