New kasa plug and home assistant

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,3 +1,5 @@
+[secrets]
+
 [server]
 host: 0.0.0.0
 #  The host address in which to bind the HTTP server.  Default is to bind
@@ -147,10 +149,11 @@ trusted_clients:
     #FE80::/10
     #::1/128
     #192.168.50.0/24
-    192.168.50.93
-    192.168.50.98
-    192.168.50.87
-    192.168.50.86
+    192.168.50.93 # Anthony Work Laptop
+    192.168.50.98 # Anthony Laptop
+    192.168.50.87 # Anthony Phone A53
+    192.168.50.86 # Garage iPhone 5
+    192.168.50.97 # Home Assistant Pi
 #   A list of newline separated ip addresses, ip ranges, or fully qualified
 #   domain names that are trusted. Trusted clients are given full access to
 #   the API.  Both IPv4 and IPv6 addresses and ranges are supported. Ranges
