--- a/printer-raspberry-pi-mcu.cfg
+++ b/printer-raspberry-pi-mcu.cfg
@@ -115,7 +115,7 @@ sensor_mcu: host
 
 # https://www.klipper3d.org/Config_Reference.html#temperature_fan
 [temperature_fan enclosure_fan]
-pin: !host:gpio25
+pin: host:gpio25
 #max_power:
 #shutdown_speed:
 #cycle_time:
