--- a/moonraker-power.cfg
+++ b/moonraker-power.cfg
@@ -1,89 +1,68 @@
-#[power device_name]
-#type:
-#   The type of device.  Can be either gpio, klipper_device, rf,
-#   tplink_smartplug, tasmota, shelly, homeseer, homeassistant, loxonev1,
-#   smartthings, mqtt or hue.
-#   This parameter must be provided.
-#off_when_shutdown: False
-#   If set to True the device will be powered off when Klipper enters
-#   the "shutdown" state.  This option applies to all device types.
-#   The default is False.
-#off_when_shutdown_delay: 0
-#   If "off_when_shutdown" is set, this option specifies the amount of time
-#   (in seconds) to wait before turning the device off. Default is 0 seconds.
-#on_when_job_queued: False
-#   If set to True the device will power on if a job is queued while the
-#   device is off.  This allows for an automated "upload, power on, and
-#   print" approach directly from the slicer, see the configuration example
-#   below for details. The default is False.
-#locked_while_printing: False
-#   If True, locks the device so that the power cannot be changed while the
-#   printer is printing. This is useful to avert an accidental shutdown to
-#   the printer's power.  The default is False.
-#restart_klipper_when_powered: False
-#   If set to True, Moonraker will schedule a "FIRMWARE_RESTART" to command
-#   after the device has been powered on. If it isn't possible to immediately
-#   schedule a firmware restart (ie: Klippy is disconnected), the restart
-#   will be postponed until Klippy reconnects and reports that startup is
-#   complete.  Prior to scheduling the restart command the power device will
-#   always check Klippy's state.  If Klippy reports that it is "ready", the
-#   FIRMWARE_RESTART will be aborted as unnecessary.
-#   The default is False.
-#restart_delay: 1.
-#   If "restart_klipper_when_powered" is set, this option specifies the amount
-#   of time (in seconds) to delay the restart.  Default is 1 second.
-#bound_service:
-#   Can be set to any service Moonraker is authorized to manage with the
-#   exception of the moonraker service itself. See the tip below this section
-#   for details on what services are authorized.  When a bound service has
-#   been set the service will be started when the device powers on and stopped
-#   when the device powers off.  The default is no service is bound to the
-#   device.
-
-#   The following options are available for gpio device types:
-
-#pin: gpiochip0/gpio26
-#   The pin to use for GPIO and RF devices.  The chip is optional, if left out
-#   then the module will default to gpiochip0.  If one wishes to invert
-#   the signal, a "!" may be prefixed to the pin.  Valid examples:
-#      gpiochip0/gpio26
-#      gpio26
-#      !gpiochip0/gpio26
-#      !gpio26
-#    This parameter must be provided for "gpio" type devices
-#initial_state: off
-#    The initial state for GPIO type devices.  May be on or
-#    off.  When moonraker starts the device will be set to this
-#    state.  Default is off.
-#timer:
-#    A time (in seconds) after which the device will power off after being.
-#    switched on. This effectively turns the device into a  momentary switch.
-#    This option is available for gpio, klipper_device, tplink_smartplug,
-#    shelly, and tasmota devices.  The timer may be a floating point value
-#    for gpio types, it should be an integer for all other types.  The
-#    default is no timer is set.
+# https://moonraker.readthedocs.io/en/latest/configuration/#power
 
 #[power Enclosure_Fan]
 #type: gpio
 #pin: !gpio19
 #off_when_shutdown: True
 
-[power Filament Dryer]
-type: gpio
-pin: !gpio24
-initial_state: on
+#[power Filament Dryer]
+#type: gpio
+#pin: !gpio24
+#initial_state: on
 
 [power Printer]
-type: gpio
-pin: !gpio26
+#type: gpio
+#pin: !gpio26
+type: homeassistant
+address: 192.168.50.97
+#   A valid ip address or hostname for the Home Assistant server.  This
+#   parameter must be provided.
+protocol: http
+#   The protocol for the URL to the Home Assistant server. Default is http.
+port: 8123
+#   The port the Home Assistant server is listening on.  Default is 8123.
+device: switch.tp_link_power_strip_6bac_plug_1
+#   The entity ID of the switch to control. This parameter must be provided.
+token: {secrets.home_assistant.token}
+#   A token used for request authorization.  This option accepts
+#   Jinja2 Templates, see the [secrets] section for details. This parameter
+#   must be provided.
+domain: switch
+#   The class of device managed by Home Assistant. Default is "switch".
+status_delay: 1.0
+#   The time (in seconds) to delay between requesting a device to turn
+#   on/off and requesting its current status.  This is a workaround used
+#   to validate that Home Assistant has successfully toggled the device,
+#   as the API is currently broken on their end.  Default is 1 second.
 off_when_shutdown: True
 on_when_job_queued: True
 locked_while_printing: True
 restart_klipper_when_powered: True
-restart_delay: 5
+restart_delay: 3
 
 [power Lights]
-type: gpio
-pin: !gpio23
+#type: gpio
+#pin: !gpio23
+type: homeassistant
+address: 192.168.50.97
+#   A valid ip address or hostname for the Home Assistant server.  This
+#   parameter must be provided.
+protocol: http
+#   The protocol for the URL to the Home Assistant server. Default is http.
+port: 8123
+#   The port the Home Assistant server is listening on.  Default is 8123.
+device: switch.tp_link_power_strip_6bac_plug_3
+#   The entity ID of the switch to control. This parameter must be provided.
+token: {secrets.home_assistant.token}
+#   A token used for request authorization.  This option accepts
+#   Jinja2 Templates, see the [secrets] section for details. This parameter
+#   must be provided.
+domain: switch
+#   The class of device managed by Home Assistant. Default is "switch".
+status_delay: 1.0
+#   The time (in seconds) to delay between requesting a device to turn
+#   on/off and requesting its current status.  This is a workaround used
+#   to validate that Home Assistant has successfully toggled the device,
+#   as the API is currently broken on their end.  Default is 1 second.
 off_when_shutdown: True
 on_when_job_queued: True
