--- a/moonraker.conf
+++ b/moonraker.conf
@@ -99,8 +99,9 @@ klippy_uds_address: /home/aspruyt/printer_data/comms/klippy.sock
 #   job is loaded.  If a "job_transition_delay" has been configured
 #   this gcode will run after the delay.  The default is no gcode.
 
-#[announcements]
-#subscriptions:
+[announcements]
+subscriptions:
+    mainsail
 #   A newline separated list announcement "subscriptions".  Generally
 #   this would refer to specific clients that are registered to provide
 #   announcements.  All items specified here are added in addition to
@@ -146,8 +147,8 @@ trusted_clients:
     #169.254.0.0/16
     #172.16.0.0/12
     #192.168.0.0/16
-    #FE80::/10
-    #::1/128
+    FE80::/10
+    ::1/128
     #192.168.50.0/24
     192.168.50.93 # Anthony Work Laptop
     192.168.50.98 # Anthony Laptop
@@ -163,12 +164,10 @@ trusted_clients:
 #   last segment of the ip address must be 0. The default is no clients are
 #   trusted.
 cors_domains:
-    #http://*.lan
-    #http://*.local
-    #https://my.mainsail.xyz
-    #http://my.mainsail.xyz
-    #https://app.fluidd.xyz
-    #http://app.fluidd.xyz
+    #*://*.lan
+    *://*.local
+    #*://my.mainsail.xyz
+    #*://app.fluidd.xyz
 #   Enables CORS for the specified domains.  One may specify * if they wish
 #   to allow all domains, however this should be an option reserved for
 #   client developers and not used in production.  A * can also be used
@@ -284,6 +283,7 @@ cors_domains:
 [update_manager]
 channel: dev
 refresh_interval: 168
+enable_auto_refresh: False
 
 [include moonraker-obico-update.cfg]
 
