--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include moonraker_obico_macros.cfg]
 [include printer-ender3-s1.cfg]
 
 [include printer-raspberry-pi-host.cfg]
@@ -10,7 +11,7 @@
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [bltouch]
-#*# z_offset = 2.242
+#*# z_offset = 3.347
 #*#
 #*# [extruder]
 #*# control = pid
@@ -33,21 +34,19 @@
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.165833, -0.120000, -0.139167, -0.125000, -0.129167, -0.099167, -0.050000, -0.029167
-#*# 	  -0.216667, -0.165000, -0.158333, -0.160833, -0.188333, -0.133333, -0.102500, -0.118333
-#*# 	  -0.140833, -0.079167, -0.070833, -0.081667, -0.055833, -0.035833, -0.014167, -0.024167
-#*# 	  0.026667, 0.065833, 0.065000, 0.039167, 0.011667, 0.040833, 0.052500, 0.010000
-#*# 	  0.125833, 0.142500, 0.124167, 0.083333, 0.060833, 0.070833, 0.090833, 0.046667
-#*# 	  0.213333, 0.227500, 0.197500, 0.149167, 0.103333, 0.095833, 0.122500, 0.025000
-#*# 	  0.260000, 0.260833, 0.218333, 0.156667, 0.122500, 0.093333, 0.088333, 0.028333
-#*# 	  0.354167, 0.340000, 0.294167, 0.222500, 0.165000, 0.145000, 0.134167, 0.046667
-#*# x_count = 8
-#*# y_count = 8
+#*# 	  0.254167, 0.128333, 0.003333, -0.108333, -0.171667, -0.235000
+#*# 	  0.298333, 0.218333, 0.101667, 0.008333, -0.050000, -0.169167
+#*# 	  0.288333, 0.183333, 0.120833, 0.025833, 0.033333, -0.036667
+#*# 	  0.230833, 0.197500, 0.130000, 0.095000, 0.083333, 0.040833
+#*# 	  0.250833, 0.143333, 0.103333, 0.035833, 0.075000, 0.030833
+#*# 	  0.270833, 0.157500, 0.080833, 0.035833, 0.018333, -0.037500
+#*# x_count = 6
+#*# y_count = 6
 #*# mesh_x_pps = 0
 #*# mesh_y_pps = 0
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 10.0
-#*# max_x = 203.97
-#*# min_y = 10.0
-#*# max_y = 192.0
+#*# min_x = 8.0
+#*# max_x = 191.95
+#*# min_y = 8.0
+#*# max_y = 231.0
