--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -25,30 +25,27 @@
 
 [crowsnest]
 log_path: /home/aspruyt/printer_data/logs/crowsnest.log
-log_level: verbose                      # Valid Options are quiet/verbose/debug
+log_level: quiet                        # Valid Options are quiet/verbose/debug
 delete_log: true                        # Deletes log on every restart, if set to true
 no_proxy: false
 
-[cam 1]
+[cam 2]
 mode: camera-streamer
 enable_rtsp: true
-rtsp_port: 8554
-port: 8080
-device: /dev/video1 #/dev/v4l/by-id/usb-9734-20210906_HD_Camera-video-index0
+rtsp_port: 8555
+port: 8081
+device: /dev/video1
 resolution: 640x480
 max_fps: 30
 
-[cam 2]
-#mode: ustreamer                        # ustreamer - Provides mjpg and snapshots. (All devices) 
-mode: camera-streamer                   # camera-streamer - Provides webrtc, mjpg and snapshots. (rpi + Raspi OS based only)
-enable_rtsp: false                     # If camera-streamer is used, this enables also usage of an rtsp server
-#enable_rtsp: true
-rtsp_port: 8555                         # Set different ports for each device!
-port: 8081                              # HTTP/MJPG Stream/Snapshot Port
-device: /dev/video0                     # See Log for available ...
-resolution: 648x486                     # widthxheight format 648x486
-max_fps: 30                              # If Hardware Supports this it will be forced, otherwise ignored/coerced.
-# You can run the Stream Services with custom flags. See https://manpages.ubuntu.com/manpages/jammy/man1/ustreamer.1.html and https://github.com/pikvm/ustreamer
-custom_flags: --camera-hflip=1 --camera-vflip=1
-# Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
+[cam 1]
+mode: ustreamer
+enable_rtsp: false
+rtsp_port: 8554
+port: 8080
+device: /dev/video0
+resolution: 648x488
+max_fps: 30
+#custom_flags: --camera-hflip=1 --camera-vflip=1
+custom_flags: --flip-vertical=1 --flip-horizontal=1
 #v4l2ctl:
