--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -25,13 +25,13 @@
 
 [crowsnest]
 log_path: /home/aspruyt/printer_data/logs/crowsnest.log
-log_level: quiet                        # Valid Options are quiet/verbose/debug
+log_level: debug                        # Valid Options are quiet/verbose/debug
 delete_log: true                        # Deletes log on every restart, if set to true
 no_proxy: false
 
 [cam 2]
 mode: camera-streamer
-enable_rtsp: true
+enable_rtsp: false
 rtsp_port: 8555
 port: 8081
 device: /dev/video1
@@ -39,13 +39,14 @@ resolution: 640x480
 max_fps: 30
 
 [cam 1]
-mode: ustreamer
+#mode: ustreamer
+mode: camera-streamer
 enable_rtsp: false
 rtsp_port: 8554
 port: 8080
 device: /dev/video0
 resolution: 648x488
-max_fps: 30
-#custom_flags: --camera-hflip=1 --camera-vflip=1
-custom_flags: --flip-vertical=1 --flip-horizontal=1
+max_fps: 15
+custom_flags: --camera-hflip=1 --camera-vflip=1 --camera-force_active=1
+#custom_flags: --flip-vertical=1 --flip-horizontal=1
 #v4l2ctl:
