--- a/moonraker-obico.cfg
+++ b/moonraker-obico.cfg
@@ -1,6 +1,6 @@
 [server]
 url = http://192.168.50.98:3334
-auth_token = 15acd9c5f67cb962305b
+auth_token = 2ffc401737efe8a57b16
 
 [moonraker]
 host = 127.0.0.1
@@ -15,6 +15,6 @@ stream_url = http://192.168.50.99/webcam/?action=stream
 path = /home/aspruyt/printer_data/logs/moonraker-obico.log
 level = INFO
 
-
 [misc]
-sentry_opt: in
+sentry_opt = in
+
