--- a/moonraker.conf
+++ b/moonraker.conf
@@ -155,6 +155,7 @@ trusted_clients:
     192.168.50.87 # Anthony Phone A53
     192.168.50.86 # Garage iPhone 5
     192.168.50.97 # Home Assistant Pi
+    192.168.50.89 # CYD Klipper
 #   A list of newline separated ip addresses, ip ranges, or fully qualified
 #   domain names that are trusted. Trusted clients are given full access to
 #   the API.  Both IPv4 and IPv6 addresses and ranges are supported. Ranges
