--- a/printer-ender3-s1.cfg
+++ b/printer-ender3-s1.cfg
@@ -99,7 +99,7 @@ kinematics: cartesian
 # was set to 500 by the custom profile I used as ref
 max_velocity: 300
 max_accel: 3000 # Should not exceed the estimated max_accel for X and Y axes as determined by resonance tester. Was at <=4400 for last test on Y axis and <= 11300 for X axis
-max_accel_to_decel: 3000
+# max_accel_to_decel: 3000 #deprecated
 max_z_velocity: 5
 max_z_accel: 100
 square_corner_velocity: 5.0
