--- a/moonraker-obico-update.cfg
+++ b/moonraker-obico-update.cfg
@@ -1,8 +1,8 @@
 [update_manager moonraker-obico]
 type: git_repo
-path: ~/moonraker-obico
+path: /home/aspruyt/moonraker-obico
 origin: https://github.com/TheSpaghettiDetective/moonraker-obico.git
-env: /home/aspruyt/moonraker-env/bin/python
+env: /home/aspruyt/moonraker-obico/../moonraker-obico-env/bin/python
 requirements: requirements.txt
 install_script: install.sh
 managed_services:
