--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -17,11 +17,15 @@
 ####    Port 8082 equals /webcam3/?action=[stream/snapshot]     #####
 ####    Port 8083 equals /webcam4/?action=[stream/snapshot]     #####
 ####                                                            #####
+####    Note: These ports are default for most Mainsail         #####
+####    installations. To use any other port would involve      #####
+####    changing the proxy configuration or using directly      #####
+####    http://<ip>:<port>/?action=[stream/snapshot]            #####
+####                                                            #####
 #####################################################################
 ####    RTSP Stream URL: ( if enabled and supported )           #####
 ####    rtsp://<ip>:<rtsp_port>/stream.h264                     #####
 #####################################################################
-
 
 [crowsnest]
 log_path: /home/aspruyt/printer_data/logs/crowsnest.log
@@ -32,21 +36,35 @@ no_proxy: false
 [cam 2]
 mode: camera-streamer
 enable_rtsp: false
-rtsp_port: 8555
-port: 8081
-device: /dev/video1
-resolution: 640x480
-max_fps: 30
-
-[cam 1]
-#mode: ustreamer
-mode: camera-streamer
-enable_rtsp: false
 rtsp_port: 8554
 port: 8080
-device: /dev/video0
+device: /dev/v4l/by-id/usb-9734-20210906_HD_Camera-video-index0
 resolution: 648x488
 max_fps: 15
 custom_flags: --camera-hflip=1 --camera-vflip=1 --camera-force_active=1
 #custom_flags: --flip-vertical=1 --flip-horizontal=1
 #v4l2ctl:
+
+[cam 1]
+mode: camera-streamer
+enable_rtsp: false
+rtsp_port: 8555
+port: 8081
+device: /dev/video2
+resolution: 640x480
+max_fps: 30
+custom_flags: --camera-hflip=1 --camera-vflip=1 --camera-force_active=1
+#custom_flags: --flip-vertical=1 --flip-horizontal=1
+#v4l2ctl:
+
+#[cam 1]
+#mode: ustreamer                         # ustreamer - Provides mjpg and snapshots. (All devices)
+                                        # camera-streamer - Provides webrtc, mjpg and snapshots. (rpi + Raspi OS based only)
+#enable_rtsp: false                      # If camera-streamer is used, this enables also usage of an rtsp server
+#rtsp_port: 8554                         # Set different ports for each device!
+#port: 8080                              # HTTP/MJPG Stream/Snapshot Port
+#device: /dev/video0                     # See Log for available ...
+#resolution: 640x480                     # widthxheight format
+#max_fps: 15                             # If Hardware Supports this it will be forced, otherwise ignored/coerced.
+#custom_flags:                          # You can run the Stream Services with custom flags.
+#v4l2ctl:                               # Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
