--- a/moonraker.conf
+++ b/moonraker.conf
@@ -305,8 +305,6 @@ install_script: scripts/install.sh
 [update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
-#primary_branch: hotfix/makefile
 origin: https://github.com/mainsail-crew/crowsnest.git
-#origin: https://github.com/anthony-spruyt/crowsnest.git
 managed_services: crowsnest
-install_script: tools/install.sh
+install_script: tools/pkglist.sh
