--- a/moonraker-obico.cfg
+++ b/moonraker-obico.cfg
@@ -8,8 +8,8 @@ port = 7125
 
 [webcam]
 disable_video_streaming = True
-snapshot_url = http://192.168.50.99/webcam/?action=snapshot
-stream_url = http://192.168.50.99/webcam/?action=stream
+snapshot_url = http://192.168.50.99/webcam2/?action=snapshot
+stream_url = http://192.168.50.99/webcam2/?action=stream
 
 [logging]
 path = /home/aspruyt/printer_data/logs/moonraker-obico.log
