--- a/moonraker-power-printer.cfg
+++ b/moonraker-power-printer.cfg
@@ -1,20 +1,6 @@
-# https://moonraker.readthedocs.io/en/latest/configuration/#power
-
-#[power Enclosure_Fan]
+[power Printer]
 #type: gpio
-#pin: !gpio19
-#off_when_shutdown: True
-
-#[power Filament Dryer]
-#type: gpio
-#pin: !gpio24
-#initial_state: on
-
-[include moonraker-power-printer.cfg]
-
-[power Lights]
-#type: gpio
-#pin: !gpio23
+#pin: !gpio26
 type: homeassistant
 address: 192.168.50.97
 #   A valid ip address or hostname for the Home Assistant server.  This
@@ -23,7 +9,7 @@ protocol: http
 #   The protocol for the URL to the Home Assistant server. Default is http.
 port: 8123
 #   The port the Home Assistant server is listening on.  Default is 8123.
-device: switch.tp_link_power_strip_6bac_plug_3
+device: switch.tp_link_power_strip_6bac_plug_1
 #   The entity ID of the switch to control. This parameter must be provided.
 token: {secrets.home_assistant.token}
 #   A token used for request authorization.  This option accepts
@@ -38,3 +24,6 @@ status_delay: 1.0
 #   as the API is currently broken on their end.  Default is 1 second.
 off_when_shutdown: True
 on_when_job_queued: True
+locked_while_printing: True
+restart_klipper_when_powered: True
+restart_delay: 3
