--- a/moonraker.conf
+++ b/moonraker.conf
@@ -153,7 +153,7 @@ trusted_clients:
     192.168.50.93 # Anthony Work Laptop
     192.168.50.98 # Anthony Laptop
     192.168.50.87 # Anthony Phone A53
-    192.168.50.86 # Garage iPhone 5
+    #192.168.50.86 # Garage iPhone 5
     192.168.50.97 # Home Assistant Pi
     192.168.50.89 # CYD Klipper
 #   A list of newline separated ip addresses, ip ranges, or fully qualified
@@ -302,6 +302,7 @@ env: ~/moonraker-telegram-bot-env/bin/python
 requirements: scripts/requirements.txt
 install_script: scripts/install.sh
 
+# Crowsnest update_manager entry
 [update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
