--- a/printer-raspberry-pi-mcu.cfg
+++ b/printer-raspberry-pi-mcu.cfg
@@ -47,71 +47,7 @@ serial: /tmp/klipper_host_mcu
 #[output_pin relay_channel_4]
 #pin: host:gpio23
 
-# https://www.klipper3d.org/Config_Reference.html#ds18b20-temperature-sensor
-# Probe 1
-[temperature_sensor Intake]
-sensor_type: DS18B20
-serial_no: 28-3c01e0765c16
-#   Each 1-wire device has a unique serial number used to identify the device,
-#   usually in the format 28-031674b175ff. This parameter must be provided.
-#   Attached 1-wire devices can be listed using the following Linux command:
-#   ls /sys/bus/w1/devices/
-#ds18_report_time:
-#   Interval in seconds between readings. Default is 3.0, with a minimum of 1.0
-sensor_mcu: host
-#   The micro-controller to read from. Must be the host_mcu
-
-# Probe 2
-[temperature_sensor Exhaust]
-sensor_type: DS18B20
-serial_no: 28-3c01e076a0bf
-#   Each 1-wire device has a unique serial number used to identify the device,
-#   usually in the format 28-031674b175ff. This parameter must be provided.
-#   Attached 1-wire devices can be listed using the following Linux command:
-#   ls /sys/bus/w1/devices/
-#ds18_report_time:
-#   Interval in seconds between readings. Default is 3.0, with a minimum of 1.0
-sensor_mcu: host
-#   The micro-controller to read from. Must be the host_mcu
-
-# Probe 3
-[temperature_sensor Stepper_Y]
-sensor_type: DS18B20
-serial_no: 28-3c01e076daf6
-#   Each 1-wire device has a unique serial number used to identify the device,
-#   usually in the format 28-031674b175ff. This parameter must be provided.
-#   Attached 1-wire devices can be listed using the following Linux command:
-#   ls /sys/bus/w1/devices/
-#ds18_report_time:
-#   Interval in seconds between readings. Default is 3.0, with a minimum of 1.0
-sensor_mcu: host
-#   The micro-controller to read from. Must be the host_mcu
-
-# Probe 4
-[temperature_sensor Front_Top]
-sensor_type: DS18B20
-serial_no: 28-3c01e0769678
-#   Each 1-wire device has a unique serial number used to identify the device,
-#   usually in the format 28-031674b175ff. This parameter must be provided.
-#   Attached 1-wire devices can be listed using the following Linux command:
-#   ls /sys/bus/w1/devices/
-#ds18_report_time:
-#   Interval in seconds between readings. Default is 3.0, with a minimum of 1.0
-sensor_mcu: host
-#   The micro-controller to read from. Must be the host_mcu
-
-# Probe 5
-[temperature_sensor Front_Bottom]
-sensor_type: DS18B20
-serial_no: 28-3c01e076cc4b
-#   Each 1-wire device has a unique serial number used to identify the device,
-#   usually in the format 28-031674b175ff. This parameter must be provided.
-#   Attached 1-wire devices can be listed using the following Linux command:
-#   ls /sys/bus/w1/devices/
-#ds18_report_time:
-#   Interval in seconds between readings. Default is 3.0, with a minimum of 1.0
-sensor_mcu: host
-#   The micro-controller to read from. Must be the host_mcu
+#[include printer-raspberry-pi-mcu-temp-sensors.cfg]
 
 # https://www.klipper3d.org/Config_Reference.html#temperature_fan
 [temperature_fan enclosure_fan]
