--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -29,33 +29,41 @@
 
 [crowsnest]
 log_path: /home/aspruyt/printer_data/logs/crowsnest.log
-log_level: debug                        # Valid Options are quiet/verbose/debug
+log_level: quiet                        # Valid Options are quiet/verbose/debug
 delete_log: true                        # Deletes log on every restart, if set to true
 no_proxy: false
 
-[cam 2]
+[cam 2] # Nozzle
 mode: camera-streamer
 enable_rtsp: false
 rtsp_port: 8554
 port: 8080
 device: /dev/v4l/by-id/usb-9734-20210906_HD_Camera-video-index0
-resolution: 648x488
+resolution: 640x480
 max_fps: 15
 custom_flags: --camera-hflip=1 --camera-vflip=1 --camera-force_active=1
-#custom_flags: --flip-vertical=1 --flip-horizontal=1
-#v4l2ctl:
 
-[cam 1]
+[cam 1] # Gantry
 mode: camera-streamer
 enable_rtsp: false
 rtsp_port: 8555
 port: 8081
-device: /dev/video2
-resolution: 640x480
-max_fps: 30
+#device: /dev/v4l/by-path/platform-fe801000.csi-video-index0
+device: /base/soc/i2c0mux/i2c@1/ov5647@36
+resolution: 648x486
+max_fps: 5
 custom_flags: --camera-hflip=1 --camera-vflip=1 --camera-force_active=1
+
+#[cam 1] # Gantry
+#mode: ustreamer
+#enable_rtsp: false
+#rtsp_port: 8555
+#port: 8081
+#device: /dev/v4l/by-path/platform-fe801000.csi-video-index0
+#device: /base/soc/i2c0mux/i2c@1/ov5647@36
+#resolution: 648x486
+#max_fps: 15
 #custom_flags: --flip-vertical=1 --flip-horizontal=1
-#v4l2ctl:
 
 #[cam 1]
 #mode: ustreamer                         # ustreamer - Provides mjpg and snapshots. (All devices)
